--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "@testing-library/jest-dom": "^5.8.0",
+    "@testing-library/react": "^10.0.4",
     "clsx": "^1.1.0",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-test-renderer": "^16.13.1"
+    "react-dom": "^16.13.1"
   },
   "prettier": {
     "semi": false
