--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "windsock",
   "version": "0.6.4",
   "description": "Generate React components from Tailwind classes",
-  "main": "index.js",
+  "main": "cjs.js",
+  "module": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup --format=cjs --external clsx,react  index.js > cjs.js"
   },
   "repository": {
     "type": "git",
@@ -32,7 +34,8 @@
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "rollup": "^2.17.0"
   },
   "prettier": {
     "semi": false
